--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -445,7 +445,7 @@ ul {
 #fotoservicios {
     margin-bottom: 80px;
 }
-
+//* NOSOTROS *//
 .nosotros1 {
     background-color: $color-uno;
     margin-top: 80px;
@@ -462,7 +462,32 @@ ul {
         height: 20vh;
     }
 }
+//* UBICACIÓN *// 
 
+.fondo_ubi {
+    max-height: 180vh;
+    background-color: $color-uno;
+    margin: 5px;
+    margin-top: 80px;
+    border-style: double;
+    border-color: $color-tres;
+    padding-bottom: 130px;
+    margin-bottom: 65px;
+}
+
+h5 {
+    padding-bottom: 15px;
+}
+
+.textoubi1 {
+    text-align: center;
+    padding-left: 5px;
+    padding-bottom: 20px;
+    border-color: $color-tres;
+    border-style: double;
+}
+
+@media only screen and (min-width: 800px){
 .fondo_ubi {
     background-color: $color-uno;
     margin: 5px;
@@ -472,24 +497,30 @@ ul {
     padding-bottom: 130px;
     height: 80vh;
     margin-bottom: 65px;
+    }
 }
 
 h5 {
     color: $color-blanco;
-    padding-bottom: 80px;
-    padding-top: 50px;
-    padding-left: 25px;
     -webkit-text-stroke:1px $color-tres;
     font-size: 25px;
+    float: left;
+    padding-top: 50px;
+    padding-left: 65px;
 }
 
 .fotoubi1 {
     padding-top: 1px;
 }
 
+@media only screen and (min-width: 800px) {
 .textoubi1 {
-    float: right;
-    padding-top: 65px;
+    padding-bottom: 60px;
+    padding-top: 50px;
+    padding-right: 35px;
+    text-align: right;
+    border: none;
+    }
 }
 
 .textoubi2 {
@@ -501,6 +532,23 @@ h5 {
 .horarioubi {
     float:right; 
 }
+
+.map {
+    text-align: center;
+}
+
+@media only screen and (min-width: 800px) {
+    .map {
+        padding-left: 20px;
+        border-left: transparent;
+        border-right: transparent;
+        border-style: double;
+        border-color: $color-tres;
+    }
+}
+
+
+//*-----------CONTACTO-------------*//
 
 .contacto1 {
     background-color: $color-uno;
