estilos agregados en ubicación

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -43,6 +43,6 @@ h5 { //* INCLUIDO SOLO EN UBICACIÓN *//
 	-webkit-text-stroke: 1px $color-tres;
 	font-size: 25px;
 	float: left;
-	padding-top: 50px;
-	padding-left: 65px;
+	padding-top: 20px;
+	text-align: center;
 }
