--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -20,12 +20,19 @@ footer {
   font-size: 10px;
   margin-top: 5vh; }
 
-.lasttext {
+.fondo_lasttext {
   border-style: double;
   border-color: #007ea7;
   text-align: center;
   margin-left: 5px;
-  background-color: #00171f; }
+  margin-right: 5px;
+  background-color: #00171f;
+  height: 5vh;
+  padding-top: 6px; }
+  .fondo_lasttext .text_lasttext {
+    background: linear-gradient(to right, transparent, #003459, #007ea7, #003459, transparent);
+    text-align: center;
+    font-size: 1rem; }
 
 .copyright {
   border-style: double;
@@ -33,7 +40,11 @@ footer {
   display: flex;
   justify-content: space-between;
   margin-left: 5px;
-  background-color: #00171f; }
+  margin-right: 5px;
+  background-color: #00171f;
+  height: 5vh;
+  padding-top: 6px;
+  font-size: 1rem; }
 
 hr {
   color: #00a8e8; }
@@ -74,8 +85,8 @@ h5 {
   -webkit-text-stroke: 1px #007ea7;
   font-size: 25px;
   float: left;
-  padding-top: 50px;
-  padding-left: 65px; }
+  padding-top: 20px;
+  text-align: center; }
 
 .index1 {
   border-style: double;
@@ -262,7 +273,10 @@ ul {
 .fondo_ubi {
   border-style: double;
   border-color: #007ea7;
-  max-height: 200vh;
+  grid-template-columns: 1;
+  max-height: 250vh;
+  max-width: 100vh;
+  height: 150vh;
   background-color: #00171f;
   margin: 5px;
   margin-top: 80px;
@@ -270,23 +284,14 @@ ul {
   margin-bottom: 65px; }
 
 .textoubi1 {
-  border-style: double;
-  border-color: #007ea7;
   text-align: center;
   padding-left: 5px;
   padding-bottom: 20px; }
 
 .textoubi2 {
-  float: right;
   padding-right: 50px;
   line-height: 85px;
   padding-left: 20px; }
-
-.fotoubi1 {
-  padding-top: 1px; }
-
-.horarioubi {
-  float: right; }
 
 .contacto1 {
   border-style: double;
@@ -467,77 +472,86 @@ body {
   .fondo_ubi {
     border-style: double;
     border-color: #007ea7;
+    display: grid;
     background-color: #00171f;
     margin: 5px;
     margin-top: 80px;
-    padding-bottom: 130px;
-    height: 80vh;
-    margin-bottom: 65px; }
+    margin-left: 30vh;
+    margin-right: 30vh;
+    margin-bottom: 65px;
+    padding-bottom: 350px;
+    height: 40vh;
+    max-width: 70%; }
   .textoubi1 {
-    padding-bottom: 60px;
-    padding-top: 50px;
+    padding-bottom: 30px;
+    padding-top: 30px;
     padding-right: 35px;
     text-align: right;
-    border: none; }
+    border: none;
+    grid-column: 1; }
   .textoubi2 {
-    float: right;
-    padding-right: 200px;
+    float: left;
+    padding-right: 260px;
+    padding-bottom: 5vh;
     line-height: 85px; }
-  #iframe {
-    width: 30%;
-    height: 99%; }
-  .map {
-    border-style: double;
-    border-color: #007ea7;
-    padding-left: 80px;
-    border-left: transparent;
-    border-right: transparent;
-    height: 50vh; }
-  .contacto1 {
-    border-style: double;
-    border-color: #007ea7;
-    background-color: #00171f;
-    display: grid;
-    grid-template-columns: auto auto;
-    height: 100%;
-    margin-top: 80px;
-    margin-bottom: 65px;
-    padding-bottom: 110px;
-    text-align: start;
-    font-size: 3vh; }
-  .contacto1__contact {
-    display: grid;
-    grid-template-columns: auto;
-    margin-top: 30px;
-    font-size: 3vh;
-    width: 50%;
-    padding-bottom: 3vh; }
-  .telefono {
-    text-align: left;
-    margin-left: 25px;
-    grid-column: 1; }
-  .redes {
-    grid-column: 1;
-    text-align: left;
-    margin-left: 25px; }
-  .fbig {
-    grid-column: 1; }
-  .mail {
-    grid-column: 1; }
-  .correo {
-    grid-column: 1; }
-  .contacto1__form {
-    grid-template-columns: auto;
-    padding-left: 120vh;
-    position: absolute;
-    text-align: center; } }
+    .textoubi2 img:hover {
+      -webkit-transform: scale(1.3);
+      transform: scale(1.3); } }
+
+#iframe {
+  height: 50vh;
+  width: 85vh;
+  position: relative;
+  float: right;
+  margin-left: 50vh;
+  margin-top: -55vh; }
+
+.contacto1 {
+  border-style: double;
+  border-color: #007ea7;
+  background-color: #00171f;
+  display: grid;
+  grid-template-columns: auto auto;
+  height: 100%;
+  margin-top: 80px;
+  margin-bottom: 65px;
+  padding-bottom: 110px;
+  text-align: start;
+  font-size: 3vh; }
+
+.contacto1__contact {
+  display: grid;
+  grid-template-columns: auto;
+  margin-top: 30px;
+  font-size: 3vh;
+  width: 50%;
+  padding-bottom: 3vh; }
+
+.telefono {
+  text-align: left;
+  margin-left: 25px;
+  grid-column: 1; }
+
+.redes {
+  grid-column: 1;
+  text-align: left;
+  margin-left: 25px; }
+
+.fbig {
+  grid-column: 1; }
+
+.mail {
+  grid-column: 1; }
+
+.correo {
+  grid-column: 1; }
+
+.contacto1__form {
+  grid-template-columns: auto;
+  padding-left: 120vh;
+  position: absolute;
+  text-align: center; }
 
 @media only screen and (max-width: 600px) {
   .ocultar_div {
     display: none; } }
-
-@media only screen and (max-width: 450px) {
-  #iframe {
-    width: 80%;
-    height: 180px;
-    align-items: center; } }
