--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -4,31 +4,27 @@
     border-style: double;
 	border-color: $color-tres;
 }
-
 .fondo_ubi {
-    @include bordes;
-    max-height: 200vh;
-    background-color: $color-uno;
-    margin: 5px;
-    margin-top: 80px;
-    padding-bottom: 100px;
-    margin-bottom: 65px;
+	@include bordes;
+	grid-template-columns: 1;
+	max-height: 250vh;
+	max-width: 100vh;
+	height: 150vh;
+	background-color: $color-uno;
+	margin: 5px;
+	margin-top: 80px;
+	padding-bottom: 100px;
+	margin-bottom: 65px;
 }
+
+	
 .textoubi1 {
-    @include bordes;
 	text-align: center;
 	padding-left: 5px;
 	padding-bottom: 20px;
 }
 .textoubi2 {
-	float: right;
 	padding-right: 50px;
 	line-height: 85px;
 	padding-left: 20px;
-}
-.fotoubi1 {
-	padding-top: 1px;
-}
-.horarioubi {
-	float: right;
 }
