--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -160,37 +160,45 @@ body {
 		text-align: center;
 		height: 20vh;
 	}
-	.fondo_ubi {
+	.fondo_ubi{ 
         @include bordes;
+		display: grid;
 		background-color: $color-uno;
 		margin: 5px;
 		margin-top: 80px;
-		padding-bottom: 130px;
-		height: 80vh;
+		margin-left: 30vh;
+		margin-right: 30vh;
 		margin-bottom: 65px;
-	}
+		padding-bottom: 350px;
+		height: 40vh;
+		max-width: 70%;
+		}
 	.textoubi1 {
-		padding-bottom: 60px;
-		padding-top: 50px;
+		padding-bottom: 30px;
+		padding-top: 30px;
 		padding-right: 35px;
 		text-align: right;
 		border: none;
+		grid-column: 1;
 	}
 	.textoubi2 {
-		float: right;
-		padding-right: 200px;
+		float: left;
+		padding-right: 260px;
+		padding-bottom: 5vh;
 		line-height: 85px;
+		img:hover {
+			-webkit-transform: scale(1.3);
+			transform: scale(1.3);
+		}
 	}
+}
 	#iframe {
-		width: 30%;
-		height: 99%;
-	}
-	.map {
-        @include bordes;
-		padding-left: 80px;
-		border-left: transparent;
-		border-right: transparent;
 		height: 50vh;
+		width: 85vh;
+		position: relative;
+		float: right;
+		margin-left: 50vh;
+		margin-top: -55vh;
 	}
 	.contacto1 {
         @include bordes;
@@ -237,17 +245,10 @@ body {
 		position: absolute;
 		text-align: center;
 	}
-}
 //* VISTA MOBIL *//
 @media only screen and (max-width: ($ancho - 200)) {
 	.ocultar_div {
 		display: none;
 	}
 }
-@media only screen and (max-width: ($ancho - 350)) {
-	#iframe {
-		width: 80%;
-		height: 180px;
-		align-items: center;
-	}
-}
+	
